moved nav up on mobile, fixed touch scroll?

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ h1 span {
  */
 
 .landing {
-  height: 100vh;
+  height: calc(100vh - 100px);
   order: -1;
   display: flex;
   flex-direction: column;
@@ -127,6 +127,7 @@ h1 span {
   color: white;
   text-decoration: none;
   text-align: center;
+  cursor: pointer;
 }
 
 .nav__item--portfolio {
